Corrected Tooltip over triangle

--- a/index.html
+++ b/index.html
@@ -42,16 +42,7 @@
     .style("font-size", "12px")
     .style("opacity", 0);
 
-  function showTip(evt, text) {
-    tooltip.style("left", (evt.pageX + 10) + "px")
-      .style("top", (evt.pageY + 10) + "px")
-      .style("display", "block")
-      .text(text);
-  }
-
-  function hideTip() {
-    tooltip.style("display", "none");
-  }
+  // tooltip helper functions removed — using opacity-based tooltip below
 
   const rects = [
     {x: 40, y: 50, w: 160, h: 100, fill: "#1f77b4"},
@@ -68,7 +59,6 @@
     .attr("height", d => d.h)
     .attr("fill", d => d.fill)
     .attr("stroke", "#333")
-    .on("mouseover", function(event, d){ d3.select(this).attr("stroke-opacity",0.7); showTip(event, "Rectangle — color: " + d.fill); })
     .on("mouseover", function(event, d){ d3.select(this).attr("stroke-opacity",0.7); tooltip.style("opacity",1).html("Rectangle — color: " + d.fill); })
     .on("mousemove", function(event, d){ tooltip.style("left", (event.pageX + 10) + "px").style("top", (event.pageY + 10) + "px"); })
     .on("mouseleave", function(){ d3.select(this).attr("stroke-opacity",1); tooltip.style("opacity",0); });
@@ -111,9 +101,12 @@
     .on("mouseleave", function(){ d3.select(this).attr("stroke-opacity",1); tooltip.style("opacity",0); });
 
   const triangle = [ {x:200,y:320}, {x:320,y:480}, {x:80,y:480} ];
+
+  const triangleFill = "#9467bd";
+
   svg.append("polygon")
     .attr("points", triangle.map(d => d.x + "," + d.y).join(" "))
-    .attr("fill", "#9467bd")
+    .attr("fill", triangleFill)
     .attr("stroke", "#222")
     .attr("stroke-width", 2)
     .on("mouseover", function(event){ d3.select(this).attr("opacity",0.85); tooltip.style("opacity",1).html("Polygon (triangle) — color: " + triangleFill); })
